--- a/provider/src/main/resources/application.yml
+++ b/provider/src/main/resources/application.yml
@@ -15,11 +15,7 @@ server:
 spring:
   application:
     name: defaultProvider
+  profiles:
+    active: dev
 
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    serviceUrl:
-      defaultZone: http://localhost:1011/eureka/
 
