--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,11 @@
     <artifactId>webDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>api</module>
         <module>consumer</module>
         <module>provider</module>
-        <module>api</module>
         <module>registry</module>
+        <module>gateway</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -50,6 +51,10 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
         </dependency>
     </dependencies>
 </project>
