--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -23,10 +23,10 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: auth
-          uri: lb://defaultAuth
+        - id: consumer
+          uri: lb://defaultConsumer
           predicates:
-            - Path=/auth/**
+            - Path=/consumer/**
           filters:
             - name: RequestRateLimiter
               args:
